<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/share_panel_bkg"
              android:paddingLeft="8dp"
              android:paddingTop="12dp"
              android:paddingRight="8dp"
              android:paddingBottom="12dp"
              android:weightSum="3">
    <TextView
            android:id="@+id/share_session"
            android:drawableTop="@drawable/ic_session"
            android:text="@string/share_session"
            android:tag="1"
            style="@style/ShareTextStyle"/>
    <TextView
            android:id="@+id/share_friend"
            android:drawableTop="@drawable/ic_friend"
            android:text="@string/share_friend"
            android:tag="2"
            style="@style/ShareTextStyle"/>
    <TextView
            android:id="@+id/share_weibo"
            android:drawableTop="@drawable/ic_weibo"
            android:text="@string/share_weibo"
            android:tag="3"
            style="@style/ShareTextStyle"/>
</LinearLayout>