<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_height"
            android:background="#ff9900">
        <TextView
                android:id="@+id/ic_drawer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:drawableLeft="@drawable/ic_navigation_drawer"
                android:paddingRight="8dp"
                android:clickable="true"
                android:onClick="onDrawerButtonClicked"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:text="@string/app_home"
                android:background="@drawable/home_up_bg"
                android:textSize="@dimen/action_bar_subtitle_size"/>
        <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/home_up_bg"
                android:contentDescription="@null"
                android:src="@drawable/ic_social_person"
                android:clickable="true"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <android.support.v4.widget.DrawerLayout
            android:id="@+id/drawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:background="#E5E5E5"
                    android:weightSum="6"
                    android:orientation="horizontal">
                <RadioButton
                        android:id="@+id/radio_home"
                        style="@style/TabStyle"
                        android:text="@string/app_home"/>
                <RadioButton
                        android:id="@+id/radio_video"
                        style="@style/TabStyle"
                        android:text="@string/app_video"/>
                <RadioButton
                        android:id="@+id/radio_image"
                        style="@style/TabStyle"
                        android:text="@string/app_image"/>
                <RadioButton
                        android:id="@+id/radio_audio"
                        style="@style/TabStyle"
                        android:text="@string/app_audio"/>
                <RadioButton
                        android:id="@+id/radio_text"
                        style="@style/TabStyle"
                        android:text="@string/app_text"/>
                <RadioButton
                        android:id="@+id/radio_miscell"
                        style="@style/TabStyle"
                        android:text="@string/app_miscell"/>
            </RadioGroup>
            <android.support.v4.view.ViewPager
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/layout_menu"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:background="#373b3e"
                android:orientation="vertical"/>
    </android.support.v4.widget.DrawerLayout>
</LinearLayout>




