<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingTop="40dp"
              android:gravity="center_horizontal"
              android:background="@drawable/dialog_bkg">
    <ImageView
            android:layout_width="100dp"
            android:layout_height="96dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_logo_big"/>
    <Button
            android:id="@+id/btn_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/home_up_bg"
            android:padding="8dp"
            android:textSize="14sp"
            android:textColor="@color/text_color_weak"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/app_author"
            android:layout_marginTop="8dp"
            android:textColor="@color/text_color_weak"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textColor="@color/text_color_weak"
            android:layout_marginTop="8dp"
            android:textSize="14sp"/>
    <Button
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@drawable/btn_close_bkg"
            android:textColor="@color/text_color_regular"
            android:text="@string/close_dialog"/>
</LinearLayout>