<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="20dp"
              android:gravity="center_horizontal"
              android:orientation="vertical">
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:layout_marginRight="12dp"
                android:src="@drawable/ic_logo_large"/>
        <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#666"
                android:shadowRadius="1"
                android:shadowColor="@color/white"
                android:shadowDy="1"
                android:text="@string/app_name"
                android:layout_toRightOf="@id/logo"/>
        <Button android:id="@+id/version_text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/name"
                  android:layout_toRightOf="@id/logo"
                  android:layout_marginTop="6dp"
                  android:paddingTop="4dp"
                  android:paddingBottom="4dp"
                  android:paddingRight="8dp"
                  android:background="@drawable/home_up_bg"
                  android:onClick="easterEgg"
                  android:textColor="#666"
                  android:textSize="12sp"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/version_text"
                  android:layout_toRightOf="@id/logo"
                  android:layout_marginTop="10dp"
                  android:text="@string/about_tip"
                  android:textColor="#666"
                  android:textSize="14sp"/>
    </RelativeLayout>
    <Button
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/feedback"
            android:textColor="#FF666666"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="@drawable/btn_feed_back"
            android:textSize="16sp"/>
    <Button
            android:id="@+id/btn_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="@drawable/btn_feed_back"
            android:text="清除缓存"
            android:textColor="#FF666666"
            android:textSize="16sp"/>

    <TextView android:id="@+id/weibo"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="4dp"
              android:background="@drawable/button_bg"
              android:text="@string/weibo"
              android:textColor="@color/black"
              android:textSize="14sp"
              android:gravity="center_vertical"
              android:drawableLeft="@drawable/weibo"
              android:drawablePadding="4dp"/>
</LinearLayout>